upgrade all doc

--- a/css/about.css
+++ b/css/about.css
@@ -19,6 +19,7 @@ body {
     padding: 0;
     margin: 0;
     font-size: 14px;
+    overflow-x: hidden;
 }
 
 
@@ -411,9 +412,10 @@ body::-webkit-scrollbar-button {
     display: none;
 }
 
-.scroll .menu {
+
+/* .scroll .menu {
     margin-left: -110px;
-}
+} */
 
 
 /* Mouse scroll animate */
@@ -1581,13 +1583,28 @@ footer {
         padding: 10px;
     }
     .main_menu .navbar-brand {
-        margin-left: -250px;
+        /* margin-left: -250px; */
+        position: absolute;
+        left: 4%;
     }
     .menu_right_block {
-        margin-right: -270px;
+        /* margin-right: -270px; */
+        position: absolute;
+        right: 4%;
+    }
+    .nav-item {
+        height: 54px;
+        display: flex;
+        align-items: center;
     }
     footer {
         margin-top: 100px;
+    }
+}
+
+@media (max-width: 1480px) {
+    .hidden {
+        display: none;
     }
 }
 
