--- a/css/requirements.css
+++ b/css/requirements.css
@@ -16,6 +16,7 @@ body {
     padding: 0;
     margin: 0;
     font-size: 14px;
+    overflow-x: hidden;
 }
 
 *,
@@ -324,6 +325,19 @@ input:focus {
     background-size: 200px 100%;
     background-repeat: no-repeat;
     color: #ffffff;
+}
+
+#anketaAfterSend {
+    display: none;
+    margin: 80px 0;
+}
+
+.anketa input.error {
+    border-bottom: 2px solid rgb(131, 34, 34);
+}
+
+.anketa label.error {
+    display: none !important;
 }
 
 .file-width {
@@ -669,9 +683,11 @@ input:focus {
     display: none;
 }
 
+
+/* 
 .scroll .menu {
     margin-left: -110px;
-}
+} */
 
 
 /**************** banner part css start ****************/
@@ -1267,6 +1283,8 @@ footer {
     }
 }
 
+
+/* 
 @media (min-width: 1200px) {
     .navbar-toggle {
         display: none
@@ -1282,6 +1300,39 @@ footer {
     }
     footer {
         margin-top: 100px;
+    }
+} */
+
+@media (min-width: 1200px) {
+    .navbar-toggle {
+        display: none
+    }
+    .main_menu .navbar {
+        padding: 10px;
+    }
+    .main_menu .navbar-brand {
+        /* margin-left: -250px; */
+        position: absolute;
+        left: 4%;
+    }
+    .menu_right_block {
+        /* margin-right: -270px; */
+        position: absolute;
+        right: 4%;
+    }
+    .nav-item {
+        height: 54px;
+        display: flex;
+        align-items: center;
+    }
+    footer {
+        margin-top: 100px;
+    }
+}
+
+@media (max-width: 1480px) {
+    .hidden {
+        display: none;
     }
 }
 
