--- a/css/requirements.css
+++ b/css/requirements.css
@@ -1003,6 +1003,48 @@ footer {
 }
 
 
+/* ------------------------------------ */
+
+.modal-content {
+    border-radius: 0;
+    height: 340px;
+    padding: 25px;
+}
+
+.modal-header {
+    border-bottom: 0!important;
+    display: block;
+}
+
+.modal-header .close {
+    position: relative;
+    padding: 0;
+    top: -40px;
+    right: -10px;
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: column;
+    padding-top: 0;
+}
+
+.fcallInp {
+    margin-bottom: 20px;
+}
+
+#fcallback {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+#fcallback p {
+    margin-top: 20px;
+    color: #000;
+}
+
+
 /****************************************************************
 ******************     ADEPT DESIGN STYLE     *******************
 ****************************************************************/
