--- a/css/about.css
+++ b/css/about.css
@@ -408,6 +408,7 @@ body::-webkit-scrollbar-button {
     background-color: #000000;
 }
 
+#fcontactAfterSend2,
 .scroll .hidden {
     display: none;
 }
@@ -1023,6 +1024,48 @@ footer {
     background: #d0bc89;
     border-color: #d0bc89;
     color: #fff;
+}
+
+
+/* ------------------------------------ */
+
+.modal-content {
+    border-radius: 0;
+    height: 340px;
+    padding: 25px;
+}
+
+.modal-header {
+    border-bottom: 0!important;
+    display: block;
+}
+
+.modal-header .close {
+    position: relative;
+    padding: 0;
+    top: -40px;
+    right: -10px;
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: column;
+    padding-top: 0;
+}
+
+.fcallInp {
+    margin-bottom: 20px;
+}
+
+#fcallback {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+#fcallback p {
+    margin-top: 20px;
+    color: #000;
 }
 
 
