--- a/css/requirements.css
+++ b/css/requirements.css
@@ -1025,18 +1025,20 @@ footer {
 .modal-header {
     border-bottom: 0!important;
     display: block;
+    padding-top: 0;
 }
 
 .modal-header .close {
     position: relative;
     padding: 0;
-    top: -40px;
+    top: -25px;
     right: -10px;
 }
 
 .modal-body {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding-top: 0;
 }
 
@@ -1053,6 +1055,34 @@ footer {
 #fcallback p {
     margin-top: 20px;
     color: #000;
+}
+
+.rowContact {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+}
+
+.messengerIcons {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+}
+
+.messIcon img {
+    width: 26px;
+}
+
+.modal-body-contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.modal-body-contact p {
+    color: black;
 }
 
 
