--- a/css/style.css
+++ b/css/style.css
@@ -698,7 +698,7 @@ body::-webkit-scrollbar-button {
 .head-text-botton {
     text-align: center;
     font-size: 22px;
-    margin-top: 230px;
+    margin-top: 220px;
     font-weight: 300;
 }
 
@@ -2443,12 +2443,13 @@ footer {
 .modal-header {
     border-bottom: 0!important;
     display: block;
+    padding-top: 0;
 }
 
 .modal-header .close {
     position: relative;
     padding: 0;
-    top: -40px;
+    top: -25px;
     right: -10px;
 }
 
@@ -2456,6 +2457,7 @@ footer {
     display: flex;
     flex-direction: column;
     padding-top: 0;
+    justify-content: center;
 }
 
 .fcallInp {
@@ -2471,6 +2473,34 @@ footer {
 #fcallback p {
     margin-top: 20px;
     color: #000;
+}
+
+.modal-body-contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.modal-body-contact p {
+    color: black;
+}
+
+.rowContact {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+}
+
+.messengerIcons {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+}
+
+.messIcon img {
+    width: 26px;
 }
 
 
