--- a/css/about.css
+++ b/css/about.css
@@ -1438,6 +1438,9 @@
             font-size: 10px;
             margin-bottom: 10px
         }
+        .writeToUs {
+            margin-top: 40px;
+        }
     }
     
     @media only screen and (min-width: 576px) and (max-width: 767px) {
