--- a/css/style.css
+++ b/css/style.css
@@ -3106,6 +3106,9 @@ footer {
         line-height: unset;
         font-size: 1.31rem;
     }
+    .writeToUs {
+        margin-top: 40px;
+    }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
