Revert "edited mobile menu and text of content"
This reverts commit 32b47f86d5d0c7a8856c4a31f25dfd1c63953f21.

--- a/css/faq.css
+++ b/css/faq.css
@@ -1021,7 +1021,7 @@ footer {
 .modal-body {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center;
     padding-top: 0;
 }
 
