--- a/css/about.css
+++ b/css/about.css
@@ -1011,7 +1011,7 @@
         display: flex;
         flex-direction: column;
         padding-top: 0;
-        /* justify-content: center; */
+        justify-content: center;
     }
     
     .fcallInp {
