--- a/css/advantages.css
+++ b/css/advantages.css
@@ -1061,7 +1061,7 @@ footer {
     display: flex;
     flex-direction: column;
     padding-top: 0;
-    /* justify-content: center; */
+    justify-content: center;
 }
 
 .fcallInp {
