--- a/css/requirements.css
+++ b/css/requirements.css
@@ -1038,7 +1038,7 @@ footer {
 .modal-body {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center;
     padding-top: 0;
 }
 
