--- a/css/about.css
+++ b/css/about.css
@@ -1067,6 +1067,10 @@
     .messIcon img {
         width: 26px;
     }
+    
+    .mod-menu {
+        justify-content: end;
+    }
     /****************************************************************
 ******************     ADEPT DESIGN STYLE     *******************
 ****************************************************************/
