--- a/css/advantages.css
+++ b/css/advantages.css
@@ -1107,6 +1107,10 @@ footer {
     width: 26px;
 }
 
+.mod-menu {
+    justify-content: end;
+}
+
 
 /****************************************************************
 ******************     ADEPT DESIGN STYLE     *******************
