--- a/css/faq.css
+++ b/css/faq.css
@@ -1068,6 +1068,10 @@ footer {
     color: black;
 }
 
+.mod-menu {
+    justify-content: end;
+}
+
 
 /****************************************************************
 ******************     ADEPT DESIGN STYLE     *******************
