--- a/css/requirements.css
+++ b/css/requirements.css
@@ -1085,6 +1085,10 @@ footer {
     color: black;
 }
 
+.mod-menu {
+    justify-content: end;
+}
+
 
 /****************************************************************
 ******************     ADEPT DESIGN STYLE     *******************
